fix: 데스크탑 환경에서 일부 콘텐츠 및 버튼이 클릭 안되는 오류 수정(overflow-y: hidden으로 인한 스크롤 오류)

--- a/css/mediaQuery.css
+++ b/css/mediaQuery.css
@@ -148,6 +148,6 @@
 
 @media screen and (max-height: 680px), screen and (max-width: 767px) {
     #wrapper {
-        overflow-y: auto;
+        overflow-y: scroll;
     }
 }
